# shrtn-backend

./: Cargo.toml  README.md
src/: db.rs  main.rs  server.rs
src/endpoints/: link_endpoints.rs  mod.rs
src/models/: link_models.rs  mod.rs
