[package]
name = "shrtn-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
futures = "0.3.28"
garde = "0.11.2"
mongodb = "2.6.0"
nanoid = "0.4.0"
serde = "1.0.164"
